[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=1]
[ext_resource path="res://Scenes/scripts/titleScreen.gd" type="Script" id=2]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )

[node name="SafeArea" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="SafeArea"]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -184.0
margin_right = 184.0
margin_bottom = 20.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_right = 58.0
margin_bottom = 204.0
script = ExtResource( 2 )

[node name="displayText" type="Label" parent="HBoxContainer"]
margin_left = 62.0
margin_top = 95.0
margin_right = 62.0
margin_bottom = 109.0

[connection signal="text_entered" from="HBoxContainer/LineEdit" to="HBoxContainer/LineEdit" method="_on_LineEdit_text_entered"]
