[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Violet Smile.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/scripts/titleScreen.gd" type="Script" id=2]
[ext_resource path="res://Images/back.jpg" type="Texture" id=4]
[ext_resource path="res://Scenes/scripts/BackGround1.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[node name="Menu2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Back" type="Sprite" parent="."]
position = Vector2( 532.34, 1331.69 )
scale = Vector2( 1.56017, 7.48506 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Back2" type="Sprite" parent="."]
position = Vector2( 1660, 1322 )
scale = Vector2( 1.56017, 7.49947 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 0.694118, 0.87451, 0.654902, 1 )
self_modulate = Color( 0, 0, 0, 1 )
light_mask = 1019
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -34.0
margin_right = -46.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 5 )
rect_scale = Vector2( 3, 2.5 )
script = ExtResource( 2 )

[node name="playButton" type="Button" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
size_flags_stretch_ratio = 2.21
text = "PLAY"

[node name="quitButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "QUIT"
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.0
margin_top = -636.0
margin_right = 337.0
margin_bottom = -406.0

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 674.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Chib Garden"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="VBoxContainer/playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="VBoxContainer/quitButton" method="_on_quitButton_pressed"]
